--- a/src/template.html
+++ b/src/template.html
@@ -5,5 +5,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
     </head>
-    <body></body>
+    <body>
+        <header>
+            <h1>SkyCast</h1>
+        </header>
+        <main>
+            <form novalidate>
+                <legend>
+                    <h2>Check your weather now!</h2>
+                </legend>
+                <label for="city-input">City</label>
+                <input type="text" name="user_city_input" id="city-input" />
+                <button type="button">Search</button>
+                <div class="weather-info"></div>
+            </form>
+        </main>
+        <footer>Made by R3ndrex</footer>
+    </body>
 </html>
