--- a/src/template.html
+++ b/src/template.html
@@ -15,7 +15,12 @@
                     <h2>Check your weather now!</h2>
                 </legend>
                 <label for="city-input">City</label>
-                <input type="text" name="user_city_input" id="city-input" />
+                <input
+                    type="text"
+                    name="user_city_input"
+                    id="city-input"
+                    placeholder="Enter city name"
+                />
                 <button type="button">Search</button>
                 <div class="weather-info"></div>
             </form>
