--- a/src/template.html
+++ b/src/template.html
@@ -8,6 +8,15 @@
     <body>
         <header>
             <h1>SkyCast</h1>
+            <div class="units-toggler">
+                <label for="units">Change units</label>
+                <select name="user_units" id="units">
+                    <option value="metric">Metric</option>
+                    <option value="us">US</option>
+                    <option value="uk">United Kingdom</option>
+                    <option value="base">Scientific</option>
+                </select>
+            </div>
         </header>
         <main>
             <form novalidate>
