Add links in footer,change input to search

--- a/src/template.html
+++ b/src/template.html
@@ -25,7 +25,7 @@
                 </legend>
                 <label for="city-input">City</label>
                 <input
-                    type="text"
+                    type="search"
                     name="user_city_input"
                     id="city-input"
                     placeholder="Enter city name"
@@ -33,6 +33,11 @@
                 <button type="button">Search</button>
             </form>
         </main>
-        <footer>Made by R3ndrex</footer>
+        <footer>
+            <div><a href="https://github.com/R3ndrex">Made by R3ndrex</a></div>
+            <div>
+                <a href="https://github.com/R3ndrex/SkyCast">Source Code</a>
+            </div>
+        </footer>
     </body>
 </html>
