Create button for getting location

--- a/src/template.html
+++ b/src/template.html
@@ -30,7 +30,10 @@
                     id="city-input"
                     placeholder="Enter city name"
                 />
-                <button type="button">Search</button>
+                <button type="button" class="search-button">Search</button>
+                <button type="button" class="location-button">
+                    Search by your location
+                </button>
             </form>
         </main>
         <footer>
