--- a/src/template.html
+++ b/src/template.html
@@ -29,6 +29,7 @@
                     name="user_city_input"
                     id="city-input"
                     placeholder="Enter city name"
+                    required
                 />
                 <button type="button" class="search-button">Search</button>
                 <button type="button" class="location-button">
