--- a/src/template.html
+++ b/src/template.html
@@ -35,6 +35,7 @@
                     Search by your location
                 </button>
             </form>
+            <div class="loading">Loading...</div>
         </main>
         <footer>
             <div><a href="https://github.com/R3ndrex">Made by R3ndrex</a></div>
